--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -34,8 +34,8 @@
         android:layout_height="wrap_content"
         android:text="Boy"
         android:textColor="@android:color/background_dark"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        android:textSize="30dp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/Btn1"
         app:layout_constraintEnd_toEndOf="@+id/Btn1"
         app:layout_constraintHorizontal_bias="0.57"
@@ -49,8 +49,8 @@
         android:layout_height="wrap_content"
         android:text="Girl"
         android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="25dp"
+        android:textStyle="italic"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/Btn2"
         app:layout_constraintEnd_toEndOf="@+id/Btn2"
         app:layout_constraintHorizontal_bias="0.572"
