--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -38,8 +38,8 @@
         android:id="@+id/imageView6"
         android:layout_width="189dp"
         android:layout_height="170dp"
-        android:background="@color/colorPrimary"
-        android:backgroundTint="#FAF8F8"
+        android:background="#FDFDFD"
+        android:backgroundTint="@color/ic_launcher_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
